# MaxCal

./: .gitignore  1  1q  2  3state  3state_offeq.cpp  ;  MPI_Write_file.cpp  MPI_write_read.cpp  MSM.sh  README.md  Tgrad  _  alphaN2.py  alpha_f.py  ana_2D.py  analyse_path_all.py  analyse_sim_Tgrad.py  analyse_single_path.py  analyse_trajectory.py  b.out  check  check_markov.py  check_markov_fvar.py  check_markov_new.py  ck-test.py  compare_T.py  const_f  create_MSM.py  create_hist.py  ctsModel.py  define_cross.py  del_files.py  estimate_Z.py  fct_markov.py  find_partition.py  find_shift.hpp  force.h  force_copy.h  force_delta.h  (+52 more)
MSM_analysis/: analyse_2D.py  analyse_sim_Tgrad.py  check_Teff.py  check_markov.py  check_markov_2D.py  check_markov_fvar.py  check_markov_new.py  ck-test.py  clustering.py  collect_moments.py  compare_T.py  create_MSM.py  create_hist.py  fpt_ana.py  pyproject.toml
Thesis/: .gitignore  Changes.tex  Structure.tex  hunsrt-nils.bst  nadisser.cls  nathesis.cls  references.bib  thesis.blg  thesis.lof  thesis.lop  thesis.out  thesis.tex  thesis.toc
data/: autocorr.py
helper/: define_flow.py
reweighting/: FS-comb.py  MFPT.py  mfpt_cts.py  reweight_MSM_MFPT.py  reweight_MSM_S.pu  reweight_cts.py
run_scripts/: alpha.py  collect_T.py  collect_alpha.py
single_particle_model_sim/: find_shift.hpp  force.h  force_delta.h  init.h  singel_particle_1D_sharp_potential.cpp  single_particle_1D_ext_force.cpp  single_particle_1D_local_force.cpp  single_particle_1D_smooth_potential.cpp  single_particle_2D.cpp  single_particle_2D_ext_force.cpp  (+2 more)
(+172 files in other folders)
